adding reactivity and fixing signal bug

--- a/src/app/pages/administration/administration.component.html
+++ b/src/app/pages/administration/administration.component.html
@@ -1,6 +1,6 @@
 <section class="flex flex-grow">
   <aside class="w-52 border-r border-lavender-gray">
-    <ul class="w-full h-dvh">
+    <ul class="w-full h-[85dvh]">
       <li class="w-full">
         <button
           class="flex justify-center space-x-5 py-4 w-full items-center text-2xl text-primary-purple border border-lavender-gray"
@@ -76,6 +76,7 @@
         </button>
       </li>
     </ul>
+    <button>Save</button>
   </aside>
   @if (inClientSection()) {
     <nt-user-administration class="w-full" />
