--- a/src/app/pages/administration/components/user-administration/user-box/user-box.component.html
+++ b/src/app/pages/administration/components/user-administration/user-box/user-box.component.html
@@ -31,7 +31,7 @@
         </li>
         <li class="flex flex-row space-x-4 items-center">
           <img src="assets/icons/heart-icon.svg" width="20" height="20" />
-          <span>{{ user()!.age }} años</span>
+          <span>{{ getUserAge() }} años</span>
         </li>
       </ul>
       <ul class="flex flex-col items-start ml-4 space-y-2">
