--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -45,7 +45,7 @@
       label="Iniciar Sesion"
       class="w-[193px] h-[55px] mx-auto mt-2 text-lg"
       type="submit"
-      [isLoading]="isLoading"
+      [isLoading]="isLoading()"
       [isDisabled]="!isFormValid() || !isFormEdited()"
     />
   </form>
