--- a/src/app/pages/schedule/schedule.component.html
+++ b/src/app/pages/schedule/schedule.component.html
@@ -1,4 +1,4 @@
-<section class="lg:flex lg:justify-center">
+<section class="lg:flex lg:justify-center lg:h-full">
   <div
     class="flex flex-col items-center mt-10 | lg:space-y-6 lg:w-big-container lg:px-8 lg:mt-10 lg:mb-20"
   >
@@ -7,7 +7,9 @@
     </h2>
     <nt-calendar class="w-full max-w-[90%]" />
   </div>
-  <div class="lg:w-small-container border-l border-lavender-gray lg:px-4">
+  <div
+    class="border-l border-lavender-gray | lg:h- lg:px-4 lg:w-small-container"
+  >
     <div class="hidden text-center | lg:mt-24 lg:block">
       <div
         class="flex flex-col text-white rounded-lg items-start bg-primary-purple max-w-72 mx-auto py-4 px-6 outline outline-1 outline-charcoal"
@@ -85,6 +87,7 @@
         [isPrimary]="true"
         label="Reservar"
         (click)="saveAppointment()"
+        [isLoading]="isResponseLoading()"
       />
       <button class="text-charcoal">Cancelar</button>
     </div>
