update login components to use new signals to recieve authentication states

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,7 +56,7 @@
       <ul
         class="flex space-y-8 flex-col items-center | lg:py-0 lg:pt-0 lg:px-10 lg:space-y-0 lg:space-x-10 lg:text-nowrap lg:items-center lg:flex lg:flex-row"
       >
-        @switch (currentUserRole) {
+        @switch (currentUserRole()) {
           @case (ADMIN_ROLE) {
             <li>
               <button class="lg:hover:text-charcoal" (click)="logout()">
