creating a appointment-info-box

--- a/src/app/pages/schedule/schedule.component.html
+++ b/src/app/pages/schedule/schedule.component.html
@@ -10,101 +10,6 @@
   <div
     class="border-l border-lavender-gray | lg:h- lg:px-4 lg:w-small-container"
   >
-    <div class="hidden text-center | lg:mt-24 lg:block">
-      <div
-        class="flex flex-col text-white rounded-lg items-start bg-primary-purple max-w-96 mx-auto py-4 px-6 outline outline-1 outline-charcoal"
-      >
-        <div class="w-full flex justify-between relative">
-          <span class="text-xl font-bold tracking-wide p-0 m-0">{{
-            this.getLongDate()
-          }}</span>
-          <button
-            class="rounded-full absolute right-0 p-4 top-0 lg:hover:bg-[#A499BA] lg:hover:outline outline-1 outline-white"
-          >
-            <img src="assets/icons/edit-icon.svg" />
-          </button>
-        </div>
-        <div class="flex justify-between w-full">
-          <span class="opacity-60 text-lg m-0 p-0"
-            >{{ getTime() }}
-            &nbsp;/&nbsp;
-            {{ isAppointmentOnline() ? "Teleconsulta" : "Presencial" }}
-            {{ getDateOwner() }}
-          </span>
-        </div>
-      </div>
-    </div>
-    @switch (currentRole()) {
-      @case (ADMIN_ROLE) {}
-      @case (CLIENT_ROLE) {
-        <div class="space-y-3 mt-10 flex flex-col items-center">
-          <h3 class="text-lg text-primary-purple tracking-wide">
-            Seleccione una hora
-          </h3>
-          <div class="space-x-8">
-            <button
-              (click)="updateHourBy(-1)"
-              class="text-3xl text-charcoal font-light"
-            >
-              -
-            </button>
-            <span
-              class="py-2 px-6 text-lg text-primary-purple border border-charcoal rounded-md"
-              >{{ getTime() }}</span
-            >
-            <button
-              (click)="updateHourBy(+1)"
-              class="text-3xl text-charcoal font-light"
-            >
-              +
-            </button>
-          </div>
-        </div>
-        <div class="space-y-4 mt-8 flex flex-col items-center">
-          <h2 class="text-lg text-primary-purple tracking-wide">
-            Seleccione modalidad
-          </h2>
-          <div class="flex space-x-6">
-            <button
-              (click)="setAppointmentIsOnline(false)"
-              class="flex items-center justify-center space-x-2"
-            >
-              <span class="border border-primary-purple rounded-full p-1 flex">
-                <span
-                  [ngClass]="
-                    isAppointmentOnline() ? notSelectedClass : selectedClass
-                  "
-                ></span>
-              </span>
-              <p class="text-charcoal">Presencial</p>
-            </button>
-            <button
-              (click)="setAppointmentIsOnline(true)"
-              class="flex items-center justify-center space-x-2"
-            >
-              <span class="border border-primary-purple rounded-full p-1 flex">
-                <span
-                  [ngClass]="
-                    isAppointmentOnline() ? selectedClass : notSelectedClass
-                  "
-                ></span>
-              </span>
-              <p class="text-charcoal">Teleconsulta</p>
-            </button>
-          </div>
-        </div>
-        <div class="flex space-x-6 items-center justify-center mt-8 mb-10">
-          <nt-button
-            [isPrimary]="true"
-            [label]="currentRole() === ADMIN_ROLE ? 'Actualizar' : 'Reservar'"
-            (click)="saveAppointment()"
-            [isLoading]="isResponseLoading()"
-          />
-          <button class="text-charcoal">Cancelar</button>
-        </div>
-      }
-      @case (ADMIN_ROLE) {}
-      @case (ADMIN_ROLE) {}
-    }
+    <nt-details-sidepanel />
   </div>
 </section>
