--- a/src/app/pages/schedule/components/details-sidepanel/components/appointment-info-box/appointment-info-box.component.html
+++ b/src/app/pages/schedule/components/details-sidepanel/components/appointment-info-box/appointment-info-box.component.html
@@ -6,7 +6,7 @@
       this.getLongDate()
     }}</span>
     <button
-      class="rounded-full absolute right-0 p-4 top-0 lg:hover:bg-[#A499BA] lg:hover:outline outline-1 outline-white"
+      class="rounded-full absolute right-0 p-4 top-0 bg-[#A499BA] lg:hover:outline outline-1 outline-white"
     >
       <img src="assets/icons/edit-icon.svg" />
     </button>
