--- a/src/app/pages/schedule/components/details-sidepanel/components/appointment-info-box/appointment-info-box.component.html
+++ b/src/app/pages/schedule/components/details-sidepanel/components/appointment-info-box/appointment-info-box.component.html
@@ -6,18 +6,38 @@
       : 'bg-white text-soft-charcoal'
   "
 >
-  <div class="w-full flex justify-between relative">
-    <span class="text-xl font-bold tracking-wide p-0 m-0">{{
-      getAppointmentLongDate() || longDate()
-    }}</span>
+  <div class="w-full flex">
+    <span
+      class="text-xl font-semibold tracking-wide p-0 m-0 | lg:flex lg:items-center lg:justify-center"
+      [ngClass]="appointment() && longDate() ? 'opacity-70' : ''"
+      >{{ getAppointmentLongDate() || longDate() }}</span
+    >
+    @if (appointment() && longDate()) {
+      <img src="assets/icons/arrow-left-icon.svg" class="mx-4" />
+      <span
+        class="text-xl font-semibold tracking-wide p-0 m-0 | lg:flex lg:items-center lg:justify-center"
+        >{{ longDate() }}</span
+      >
+    }
   </div>
-  <div class="flex justify-between w-full">
-    <span class="text-lg m-0 p-0"
+  <div class="flex w-full">
+    <span
+      class="m-0 p-0"
+      [ngClass]="appointment() && longDate() ? 'opacity-70' : ''"
       >{{ getAppointmentTime() || time() }}
-      &nbsp;/&nbsp;
-      {{
-        (appointment()?.isOnline ?? isOnline()) ? "Teleconsulta" : "Presencial"
-      }}
     </span>
+    @if (appointment() && longDate()) {
+      <img src="assets/icons/arrow-left-icon.svg" class="mx-4" />
+      <span>{{ time() }}</span>
+    } @else {
+      <span class="mx-2">/</span>
+      <span>
+        {{
+          (isOnline() ?? appointment()?.isOnline)
+            ? "Teleconsulta"
+            : "Presencial"
+        }}
+      </span>
+    }
   </div>
 </div>
