--- a/src/app/pages/schedule/components/details-sidepanel/components/appointment-info-box/appointment-info-box.component.html
+++ b/src/app/pages/schedule/components/details-sidepanel/components/appointment-info-box/appointment-info-box.component.html
@@ -1,5 +1,5 @@
 <div
-  class="flex flex-col rounded-lg items-start max-w-96 mx-auto py-4 px-6 outline outline-1 outline-soft-charcoal"
+  class="flex flex-col w-full rounded-lg items-start mx-auto py-4 px-6 outline outline-1 outline-soft-charcoal"
   [ngClass]="
     isBoxSelected()
       ? 'bg-primary-purple text-white'
