create change month component

--- a/src/app/pages/schedule/components/details-sidepanel/details-sidepanel.component.html
+++ b/src/app/pages/schedule/components/details-sidepanel/details-sidepanel.component.html
@@ -5,7 +5,7 @@
     onEditAppointment() ||
     isNewAppointment()
       ? 'mt-16'
-      : 'mt-32'
+      : 'mt-28'
   "
 >
   @if (
@@ -24,9 +24,9 @@
       </h3>
     } @else {
       <div class="mx-auto flex flex-col justify-center w-fit">
-        <img src="assets/icons/free-dates-icon.svg" />
+        <img src="assets/icons/free-dates-icon.svg" class="max-w-48 mx-auto" />
         <span
-          class="text-2xl tracking-wide text-center text-[#E6E6E6] font-bold"
+          class="text-3xl tracking-wide text-center text-[#E6E6E6] mt-4 font-bold"
           >¡Citas disponibles!</span
         >
       </div>
