changing behavior in appointment-info-box component when user creates or updates and appointment to improve UX

--- a/src/app/pages/calendar/calendar.component.html
+++ b/src/app/pages/calendar/calendar.component.html
@@ -1,9 +1,9 @@
 <section
   class="w-full mx-auto max-w-80 text-center | sm: sm:overflow-hidden sm:max-w-[900px] sm:flex sm:flex-col sm:items-center sm:justify-center sm:rounded-2xl sm:outline sm:outline-1 sm:outline-lavender-gray"
 >
-  <span class="text-primary-purple text-lg tracking-wide | sm:hidden"
-    >Seleccione una fecha</span
-  >
+  <h3 class="text-primary-purple text-lg tracking-wide | sm:hidden">
+    Seleccione una fecha
+  </h3>
   <div
     class="flex py-4 items-center justify-center border-b | sm:w-full sm:py-5 sm:bg-primary-purple"
   >
